tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__HowMuchPowerFrom-AAAAAAAAAAAAAAAAAAAMWw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3163,
  "prerequisites": [
    3152
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A completed Fusion Reactor does not generate any EU on its own, it only consumes it. That said, it's very simple to generate power from plasma, a one-step process of having a Plasma Turbine. These special turbines only work with plasma and are significantly more expensive than the previous ones, requiring Tungstensteel for the body and Naquadah + Naquadah Alloy for the controller.\n\nFirst, how much plasma can one tier 1 reactor produce? The best option for power at this stage is Helium Plasma, with its cheap inputs, and this takes 6.4 seconds per bucket to generate. Since a bucket is worth 81,920,000 EU, that equates to 640,000 EU/t at 100% efficiency or 960,000 EU/t at 150%. That is almost 8 ZPM amps, a healthy amount of power for LuV, although not as much as some other options you might already be using.\n\nThat said, you will still need multiple turbines to actually consume all of the plasma. At LuV, each turbine can only output the equivalent of 1 ZPM amp, so you will need high-efficiency turbines that don't go above the value of 131,072 EU/t output. Three candidates, in descending order of efficiency, are: Large Rhodium-Palladium at 150% and 124,740 EU/t, Normal Draconium at 145% and 121,800 EU/t and Large Tungstencarbide at 140% and 123,480 EU/t.\n\n[note]Note: the suggestions in this questline might be outdated, and there might be other options that are just as good, if not better. Look through NEI and ask other people, there might be a new setup that can replace the ones in these quests![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "How Much Power From One Reactor?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3152
  ],
  "rewards": [],
  "tasks": []
}
