tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__ImprovedFission-AAAAAAAAAAAAAAAAAAAMTg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3150,
  "prerequisites": [
    3145
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This branch starts at mid-IV. In this direction, you will find several setups that are related to nuclear fission, the same process that the IC2 nukes do, but in more complex and rewarding ways. Through here, you can get power and breeding byproducts as you would with nukes, but faster and with more variety of options and goals.\n\nThat's right. If you've used IC2 nukes, you might have learned more or less how they work, but the whole system feels a bit dated. That's no surprise, considering that this is base IC2 content and from 10 years ago or more. Whatever additions GTNH gave to those setups, they were minimal in comparison to the general implementation of those nukes. In fact, some of the new content for those was a result of new nuclear fission content that was sort of backported into nukes.\n\nWe have good progression standards here, though. Once you've reached IV, LuV and so on, you will be able to use more advanced ways to work with Thorium and Uranium! These fuels are almost always the focus of the whole thing, with Plutonium coming in from time to time, but each new reactor will demand them to be supplied in a different way for things to work properly. The power generating reactors featured here are the LFTR, the THTR and the Naq-related reactors.\n\nFinally, this questline features many different multis and setups that are often unrelated to each other. Instead of forcing you to build a full LFTR setup before getting access to the THTR, for example, these quests will have simple required tasks, and simple rewards. The optional tasks will have the main expensive crafting, to guide you in building these setups if you're interested in them.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Improved Fission",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3145
  ],
  "rewards": [],
  "tasks": []
}
