tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__InputsandOutputs-AAAAAAAAAAAAAAAAAAAMaQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3177,
  "prerequisites": [
    3159
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Assuming you have both the LFTR and the Fuel Refinery built, and the inputs for the fuel available to be used, you can power up the reactor and leave it running. The first fuel you can use will work with 4 IV Energy Dynamos to output 4 IV amps, as long as the reactor runs, and each cycle lasts for 100 seconds (you can see the recipes on NEI, there's a tab dedicated to the 3 fuels the LFTR can run and what you get from them).\n\nWhat about everything else? The entire setup has 2 inputs and 4 outputs. One of the inputs is any of the 3 possible fuels, the other input is Lithium Tetrafluoroberyllate (LTFB). On the output side, there's one constant: U233 is output in small quantities at random, averaging 10 seconds per output. There are two other outputs, U Salt and UF6, that come from every fuel, although better fuels output more of these per cycle. Finally, T Salt or TB Salt can be outputted, the first from the first fuel and the second from the other two, with TB being more valuable than T. All of these are meant to be processed in order to reach better LFTR fuels, and also useful breeding byproducts.\n\nStarting with the first fuel, every bucket of it will need 2 buckets of LTFB, last 1000 seconds and output a total of 655,536,000 EU at 32,768 EU/t. After this, you will have 367L of U233 on average, 250L of U Salt, 500L of T Salt and 5L of UF6. As you can tell, this is a slow burner, and one bucket of each of these fluids is worth a lot!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Inputs and Outputs in the LFTR",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3159
  ],
  "rewards": [],
  "tasks": []
}
