tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__LiquidFluorineTh-AAAAAAAAAAAAAAAAAAAMVw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3159,
  "prerequisites": [
    3158
  ],
  "properties": {
    "auto_claim": false,
    "desc": "What a complicated name this is. What does it mean?\n\nWell, it's what is called a molten salt reactor. The Liquid Fluoride part means that the nuclear fuel is actually a liquid, mixed in with fluoride salts. This is a mechanism that makes it more difficult to get the fuel ready for fission, but also makes the process more efficient, gives out more byproducts and also removes the danger of explosion. That's right, nuclear meltdowns are a thing of the past! The molten salt is designed to flow downwards into a hole where it solidifies, in case the reactor has problems, so it's impossible for the fission process to continue into an explosive mess.\n\nThere are three downsides, though. One of them was mentioned just above, the fuel needs more processing to be ready for the LFTR, and more input materials to reach the right mixture. After it goes through the reactor, it comes out as depleted, and this part too requires more processing steps, although it gives out a lot more useful chemicals than the single Lutetium/Plutonium the IC2 nuke depletion process gave. Lastly, the molten salt is very hot and very corrosive, which means it would destroy the materials used to build the IC2 nukes. You will need newer, stronger and more expensive materials to build a reactor, not to mention its much larger size.\n\nThe structure for this multi is truly something else. It has not one, but four required Dynamo Hatches, which should all be the Buffered type, either EV, IV or LuV depending on the fuel being fed into the reactor, with better fuels being unlocked at later progression stages. This means that one LFTR makes either 1 LuV amp, 1 ZPM amp or 1 UV amp while running. It also requires 2 Maintenance and 4 Muffler Hatches, when it has no maintenance problems or pollution output! Mysterious are the workings of this reactor.\n\nOther than this, all the inputs and outputs are fluids. The minimum amount you'll need is 2 inputs and 4 outputs, although one of the outputs comes out over time, and not on recipe finish. This output is Uranium 233, a very rare isotope that can get you deeper into LFTR fuels and more power, hardly obtainable from any other source.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Liquid Fluorine Thorium Reactor",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3158
  ],
  "rewards": [],
  "tasks": []
}
