tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__MOXNukes-AAAAAAAAAAAAAAAAAAAMZw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3175,
  "prerequisites": [
    3172
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Upon gathering more Plutonium, you can try building a MOX nuke, the most powerful of the basic nukes. It is a 6-chamber, like usual, and it takes U238 as before, but it outputs close to 6820 EU/t while only using 5 quad rods instead of 7. How is this possible? The answer is... MOX.\n\nMOX means mixed-oxide, which is the name given to the mix of Uranium and Plutonium. In here, rods with this fuel are special in the sense that they don't output a specific amount of EU/t from the usual nuke mechanics. On top of those, it also reacts to the heat of the reactor, generating more energy the hotter it is. To compensate, these rods last only half the time that the Uranium fuel rods do, but their total EU is higher if they are active in very hot reactors. This imposes an obvious problem - hot reactors are not good for your base.\n\nThere is one standardized way of dealing with this: heat-neutral reactors. What this means is that the reactor's temperature does not change while it's active, because the components inside are not interacting with the reactor's temperature value, only with the value of other components like the fuel rods themselves. This limits the type of components you can use, and you'll find that Advanced Heat Vents are now required (the overclocked ones interact with the reactor itself). However, at the same time, you can use any fuel rod to heat the reactor up to a high temperature and then activate a setup of this kind, which ensures safety and efficiency in MOX nukes.\n\nVAAV\nARRA\nVAAV\nVAAV\nARRA\nVAAV\n\nA - Advanced Heat Exchanger (12 needed)\nV - Component Heat Vent (8 needed)\nR - Dual Fuel Rod of MOX (4 needed)\n\n1200-2730 EU/t\n\n(This setup is the most efficient per MOX fuel rod, if you're short on fuel, which you shouldn't be if you're doing a MOX setup)\n\nAEAVPVAEA\nVARAVARAV\nAVAVAVAVA\nEAVARAVAE\nARAVAVARA\nVAEAVAEAV\n\nA - Advanced Heat Vent (26 needed)\nE - Component Heat Exchanger (6 needed)\nV - Component Heat Vent (16 needed)\nR - Quad Fuel Rod of MOX (5 needed)\nP - Reactor Plating (1 needed)\n\n3000-6825 EU/t\n\n(This setup is the most efficient per Advanced Heat Vent)",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "MOX Nukes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3172
  ],
  "rewards": [],
  "tasks": []
}
