tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__MaxedoutLFTR-AAAAAAAAAAAAAAAAAAAMfQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3197,
  "prerequisites": [
    3195
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An LuV LFTR running on Fuel 3 outputs 4 ZPM amps per tick, or 524,288 EU/t. Each bucket is worth 1,048,576,000,000 EU, more than a trillion EU! Certainly, this is the most power-dense fuel you've ever held, and now that you've made it here, you can make it to fusion and beyond much more easily. But wait, there's more!\n\nYou might have noticed that the limiting factor in using the best recipe for Fuel 1 and Fuel 2 was the U Salt, which ultimately makes the LFTR Fuel Base. You just can't get enough of it to drop that inefficient 4-input recipe. However, the increased output of U Salt from Fuel 3, alongside the doubling that you can get from processing Helium Sparged U Salt instead of the regular one, means that you can use the 2-input recipe to make all your fuel from now on! If you haven't set up Helium Sparge Towers yet, do so now.\n\nWhen you do this, you can grab the two Fuel Refineries you should have and set them both to the 2-input recipe. Each bucket of Fuel 3 takes 9000 seconds to make, but is consumed in 4000 seconds, so it's good to have more than one Refinery per LFTR. With this, you will make fuel much faster, and generate much more EU than before. If you continue expanding, it's very possible to match the first tiers of fusion power from something like this.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Maxed-out LFTR",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3195
  ],
  "rewards": [],
  "tasks": []
}
