tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__NuclearFuelProce-AAAAAAAAAAAAAAAAAAAMaA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3176,
  "prerequisites": [
    3159
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The previous reactor is useless on its own, unfortunately. Even if you have built it fully, there's no way to get fuel that it will accept without making another multi that mixes and processes several chemical mixtures into one, the molten salt that generates all that nuclear energy in the LFTR.\n\nThe multi's name is Reactor Fuel Processing Plant (RFPP), although it's easier to call it the Fuel Refinery. It's a mid-late IV multiblock, like the LFTR, especially due to needing 2 ZPM circuits for the Computer Cube used in the controller's recipe. The other casings are similar to what you've made before, and the tooltip gives a good description of what exactly is needed to build the Fuel Refinery.\n\nWhere to put each casing? The bottom two layers are 3x3, and they take the Structural Blocks. On top of the second layer, in the middle block, make a tower of 5 Fluid Containment Blocks, and then cover these with Sealant Blocks, like you would do in a Multiblock Miner. However, the second layer of the 5, from the bottom, uses Reactor Shielding Blocks, 4 of them there instead of the Sealant Blocks. Use the Hologram Projector for assistance if you're having trouble.\n\nWhen it's fully built, you can focus on the recipes. Out of the 5 that are available, you can only do one at this time, the Fuel 1 recipe. To make this fuel, you need molten U235, but also Lithium Fluoride, Beryllium Fluoride and Zirconium Tetrafluoride. Each of the these elements can be obtained with relative ease, each in their own way, but Fluorine is the main part of all this, the main component of the molten salt, so it's a good idea to have a decent source of it. However, the LFTR fuels are also very, very energy dense, so each bucket of Fluorine can bring you a long way.\n\nIf you're looking through NEI, your first response might be \"There are no recipes for these fluorides other than reprocessing the depleted fuels! How am I supposed to make these?\". The answer is in the dusts: you have to craft the dusts and then fluid extract them into the fluids. There is a spreadsheet which has all the steps in crafting and reprocessing ([url]https://docs.google.com/spreadsheets/d/1_1JGSt5-ELdra6emngUc7XvKSJc-_-RO0yreRIbOrx0/edit?usp=sharing[/url]), to help with how complicated this chain is.\n\nJust make sure you remember, each bucket of fuel is worth many millions, perhaps even billions of EU! Don't let the 207M EU cost per bucket of Fuel 1 discourage you, it turns into much more energy in the LFTR. Besides, this first fuel is just a stepping stone, so don't worry about fully automating everything just yet, the final setup is different from this one.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Nuclear Fuel Processing",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3159
  ],
  "rewards": [],
  "tasks": []
}
