tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__NukesSummarized-AAAAAAAAAAAAAAAAAAAMZg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3174,
  "prerequisites": [
    3173,
    3175
  ],
  "properties": {
    "auto_claim": false,
    "desc": "IC2 nukes will fall off when you arrive at fusion energy, for the most part. Although the highest EU/t numbers obtained from these newer, more powerful cells haven't been calculated yet, it is more likely that you will be using them to process the excited materials instead of focusing your powergen on them.\n\nThat said, it is possible to push them very far by using a bigger Heat Exchanger (there are two kinds) and XL Turbines, if going fluid, or by putting together a lot of vacuum nukes. If you want to choose the latter ones, due to their direct EU/t, then there's one last step: The Core.\n\nThese are super-powerful fuel rods that can create UHV setups, as long as you cool them down with the most powerful coolant cells there are. A setup for this exists in the wiki, but the most difficult part will be the redstone automation. These babies will turn your base into a mini Sun, if you let them, so you best have practiced your redstone skills!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Nukes - Summarized",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3173,
    3175
  ],
  "rewards": [],
  "tasks": []
}
